<!--
SlimSocial for Facebook is an Open Source app realized by Leonardo Rignanese
 GNU GENERAL PUBLIC LICENSE  Version 2, June 1991
-->
<resources>

    <!--remove this from your translations-->
    <string name="launcher_name" translatable="false">SlimSocial for Facebook</string>
    <string name="actionbar_name" translatable="false">SlimSocial</string>
    <string name="urlFacebookMobile" translatable="false">https://touch.facebook.com/home.php</string>
    <string name="urlMessages" translatable="false">https://www.messenger.com</string>
    <string name="userAgent" translatable="false">Mozilla/5.0 (Linux; U; Android 2.3.3; en-gb; Nexus S Build/GRI20) AppleWebKit/533.1 (KHTML, like Gecko) Version/4.0 Mobile Safari/533.1</string>
    <string name="home" translatable="false">Home</string>
    <string name="top" translatable="false">Top</string>
    <string name="mainDeveloper" translatable="false">Leonardo Rignanese</string>
    <!--end remove this from your translations-->

    <!--  !!!  PLEASE TRANSLATE KEEPING THIS FORMAT.  !!!   -->

    <!-- TRANSLATION IS MADE BY: *YOURNAME* -->

    <!--menu string-->
    <string name="refresh">Refresh</string>
    <string name="openInBrowser">Open in the browser</string>
    <string name="settings">Settings</string>
    <string name="shareThisApp">Share this app</string>
    <!--end menu string-->

    <!--settings-->
    <string name="prefCat_fb_settings_title">Facebook Settings</string>
    <string name="prefCat_app_settings_title">App Settings</string>
    <string name="prefCat_app_information_title">App Information</string>
    <string name="title_recentNewsFirst">Order the news feed by most recent</string>
    <string name="summary_recentNewsFirst">Instead of by popularity</string>
    <string name="title_centerTextPosts">Center the post text</string>
    <string name="summary_centerTextPosts">The text of each post will be centered</string>
    <string name="summary_addSpaceBetweenPosts">There will be more space between posts</string>
    <string name="title_addSpaceBetweenPosts">More space between posts</string>
    <string name="summary_creditsCssThemes">Thanks for the fantastic themes!</string>
    <string name="summary_theme">Choose the theme that you like</string>
    <string name="title_fixedBar">Fixed top bar</string>
    <string name="summary_fixedBar">The blue bar will remain stuck on the top</string>
    <string name="title_hideSponsoredPosts">Don\'t show sponsored posts</string>
    <string name="summary_hideSponsoredPosts">Some sponsored posts will be hidden</string>
    <string name="title_downloadImages">Save Data </string>
    <string name="summary_downloadImages">Don\'t download images</string>
    <string name="summary_allowGeolocation">Facebook will be able to access to your position</string>
    <string name="title_allowGeolocation">Allow the use of GPS</string>
    <string name="version">Version</string>
    <string name="credits">Credits</string>
    <string name="prefCat_otherCredits_title">Other</string>
    <string name="prefCat_developersCredits_title">Developers</string>
    <string name="summary_LeonardoRignanese">Creator and developer of the app</string>
    <string name="prefCat_translatorsCredits_title">Translators</string>
    <string name="prefCat_designersCredits_title">Designers</string>
    <string name="donate">DONATE</string>
    <string name="donateToContributeWithoutPaypal">I chose to make this app for free. Would you like to
        contribute by offering me a coffee? Let\'s get in touch!</string>
    <string name="summary_you">It\'s also thanks to you that this app exists</string>
    <string name="title_you">You are important</string>
    <!--end settings-->

    <!--page error-->
    <string name="titleNoConnection">Oops, there is a problem!</string>
    <string name="descriptionNoConnection">Check the connection and retry.</string>
    <string name="awards">This is an open-source app.</string>
    <!--end page error-->

    <!--other-->
    <string name="thanks">Thanks!</string>
    <string name="downloadOrShareWithBrowser">You can download or share this image by opening with a browser.</string>
    <string name="shareThisLink">Share this link</string>
    <string name="summary_FaceSlim">Without them, I couldn\'t add some attractive functions. If you are a developer, you have to see their massive work!</string>
    <string name="summary_lRemainl">Creator of the magnificent logo</string>
    <string name="summary_Pharetra">Full of talent and creativity</string>
    <string name="exit">Exit</string>
    <string name="downloadThisApp" translatable="false">Download SlimSocial for Facebook: \n https://play.google.com/store/apps/details?id=it.rignanese.leo.slimfacebook</string>
    <string name="noPersonalInformationAreShared">No personal or private information about you or your device is collected or transmitted by this app.</string>
    <string name="title_theme">Themes</string>
    <string name="applyingChanges">Applying changes…</string>
    <string name="title_textSize">Text Size</string>
    <string name="title_enableFastShare">Enable Fast Share</string>
    <string name="summary_enableFastShare">With Fast Share, you can share any link simply by tapping and holding it</string>
    <string name="summary_textSize">Choose the text size that you prefer</string>
    <string name="refreshToApply">Refresh Facebook to apply the changes</string>
    <string name="summary_AdvancedWebView">Part of this app is based on their work</string>
    <string name="title_translate">Would you like to translate this app?</string>
    <string name="summary_translate">Use my WebTool: tap here, select your language, generate the builder, correct errors, generate, and send me the \'strings.xml\' file by email.</string>
    <string name="title_removeMessengerDownload">Remove \'Download Messenger\' ads</string>
    <string name="summary_removeMessengerDownload">The ads with \'Install Messenger\' will be hidden</string>
    <string name="summary_SaschaHa">A very talented and smart guy that helped me a lot and has become a friend. Tap here to see his incredible work!</string>
    <string name="supportMe">Support me</string>
    <!--<string name="donateWithPayPal">Donate with PayPal</string>-->
    <string name="contribute">Contribute</string>
    <string name="messages">Messages</string>
    <string name="close">Close </string>
    <string name="acceptPermissionAndRetry">Accept permissions and retry!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="downloadingPhoto">Downloading photo…</string>
    <string name="askDownloadPhoto">Download photo?</string>
    <string name="holdImageToDownload">Hold the image to download!</string>
    <string name="title_rate">Rate this app</string>
    <string name="summary_rate">You can support me writing a nice review in the Play Store. Please, if something doesn\'t work, contact me before writing a bad review</string>
    <string name="title_enableMessagesShortcut">Enable messages shortcut</string>
    <string name="summary_enableMessagesShortcut">When enabled, the SlimSocial messages tab will open when you tap on the Facebook messages icon</string>
    <string name="title_useSlimSocialSubfolderToDownloadedFiles">Use \'SlimSocial\' subfolder</string>
    <string name="summary_useSlimSocialSubfolderToDownloadedFiles">Save images in a subfolder rather than in the \'Download\' folder</string>
    <string name="shareLink">Share this page</string>
    <string name="title_enableNotifications">Enable Notifications</string>
    <string name="noNotificationEnjoyLife">I am looking for the best way to implement them. In the meanwhile, enjoy life without Facebook\'s interruptions :)</string>
    <string name="paypalDonationLink">https://rignaneseleo.github.io/</string>

    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="myWebsite" translatable="false">https://rignaneseleo.github.io/</string>
    <string name="supportMyProjects">It contains info about me and links to support my projects</string>
    <string name="visitMyWebsite">Visit my website</string>
    <string name="donateToContribute">I chose to develop this app for free and share the code with the community, protecting you and your data from Facebook. Do I deserve a coffee?</string>

    <string name="summary_hideStories">Turn this on to hide the stories on your feed</string>
    <string name="title_hideStories">Hide stories</string>
    <string name="summary_enableFab">Show the round button on the bottom right</string>
    <string name="title_enableFab">Show button to go to the top</string>
    <string name="next">Next</string>
    <string name="donatedialog_desc">Thanks to this app, you can enjoy Facebook while your phone data is safe. SlimSocial is an independent project that only relies on people\'s donations.</string>
    <string name="dataworth">How much is your data worth?</string>
    <string name="needsupport">SlimSocial needs your support!</string>
    <string name="dontsupport">Do not support</string>

    <!--end other-->
</resources>

    <!-- PLAY STORE PAGE

SHORT DESCRIPTION ( max 80 char! shape and adapt it. use http://www.charcounter.com/ ):
A lightweight, open-source Facebook client

FULL DESCRIPTION:
ATTENTION: This app may not be suitable for who use Facebook frequently.

Why use SlimSocial for Facebook?
- Lightweight (less than 1 MB)
- Simple modern design; there is only what you need, and nothing you don't
- Open-source: the code of this app can be found on GitHub, anyone can verify the authenticity of the app and contribute to its development
- Free and ad-free
- Non-intrusive
- Respects your privacy: this app doesn't require special permissions. Facebook cannot access any data on your mobile phone without your consent when using this app

The app is in full development, so these don't work yet:
- Notifications

Link to GitHub
https://github.com/rignaneseleo/SlimSocial-for-Facebook

***This is not an official app from Facebook***
This is a project that is meant to make peoples' lives easier.
This app will launch Facebook. It is provided free for all without any ads.
    -->
