<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

    <PreferenceCategory
        android:key="prefCat_key_fb_settings"
        android:title="@string/prefCat_fb_settings_title">

        <!--Set the homepage news order: recent or popular -->
        <CheckBoxPreference
            android:defaultValue="false"

            android:key="pref_recentNewsFirst"
            android:summary="@string/summary_recentNewsFirst"
            android:title="@string/title_recentNewsFirst"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="prefCat_key_app_settings"
        android:title="@string/prefCat_app_settings_title">

       <Preference android:title="@string/title_networkUsage">

            <intent
                android:action="android.intent.action.MANAGE_NETWORK_USAGE"
                />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>